<resources>
    <string name="app_name">Jagiellonska</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_map">Map</string>
    <string name="menu_donate">Donate :)</string>
    <string name="menu_about">About us</string>
    <string name="title_activity_maps">Map</string>
</resources>
