<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_donate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
