<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.jagiellonska.ui.home.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.jagiellonska.ui.gallery.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_mapp"
        android:name="com.example.jagiellonska.ui.slideshow.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />



    <fragment
        android:id="@+id/nav_donate"
        android:name="com.example.jagiellonska.ui.share.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.jagiellonska.ui.send.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>